--- a/README
+++ b/README
@@ -24,3 +24,13 @@ b) the fortran XMF generator reads these to know what files to process
 c) the fortran XMF generator fetches the attributes directly from the *.h5 files. that is all we need to create the XML file.
 
 Note: this is the concept of light and heavy data (www.xdmf.org). The light XML file just tells PARAVIEW what to do with the heavy *.h5 files. YOU NEED BOTH!
+
+
+------------------------------------------------------------
+	BINARY to PARAVIEW
+------------------------------------------------------------
+this script and converter is designed to convert *.binary files to *.vtk files.
+a *.vtk file can then be read into paraview directly.
+
+if the *.binary contains a scalar, such as mask_00010.binary, a file mask_00010.vtk will be generated.
+if the *.binary file is part of a vector, which is the case for ux_00010.binary, the script looks for the other two components uy_00010.binary and uz_00010.binary and converts all three to the file u_00010.vtk
