introduced dmitry to git

--- a/README
+++ b/README
@@ -42,3 +42,6 @@ if the *.binary file is part of a vector, which is the case for ux_00010.binary,
 these scripts are deprecated with newer versions of FLUSI/PENGHOST
 they convert the *.mpiio files, which the codes write directly, into a standard fortran-readable *.binary file
 these *.binary files can then be processed with binary2vapor.sh to load them into VAPOR
+
+
+------------HelloDmitry
